OWB-1306 on master java, sun.mic.Unsafe does not exist so grab it where it is